fix scrollbar

--- a/core/less/common/ev-panels.less
+++ b/core/less/common/ev-panels.less
@@ -110,7 +110,7 @@
         background: @ev-panel-bg;
         height: 100%;
         border-left: 1px solid @ev-panel-inner-border;
-        position: relative;
+        // NEVER put this in position: relative; because scrollbar
         left: auto!important;
         // z-index: @zindex-modal;
         background: #FFF;
